[gd_scene load_steps=79 format=3 uid="uid://buxurdmy5l22s"]

[ext_resource type="Script" uid="uid://7j2fxan644jx" path="res://Character/Warrior/Warrior.gd" id="1_ij6vw"]
[ext_resource type="Resource" uid="uid://ct3husp0sat75" path="res://ui/inventory/playerinv.tres" id="2_cr365"]
[ext_resource type="Script" uid="uid://cl74mr4y7gwpo" path="res://health_component.gd" id="3_ghijl"]
[ext_resource type="Script" uid="uid://cdw5xqpa77fb6" path="res://camera_2d.gd" id="4_44cfe"]
[ext_resource type="Script" uid="uid://dhk7lko5rrone" path="res://Character/Warrior/weapon.gd" id="5_dd465"]
[ext_resource type="Script" uid="uid://crtgs854qluco" path="res://Character/Warrior/block_area.gd" id="6_b7jr5"]
[ext_resource type="Script" uid="uid://bge44xo1m7341" path="res://Character/Warrior/stamina_ui.gd" id="7_jw0ga"]
[ext_resource type="Script" uid="uid://djpuh1ssx6b05" path="res://Character/Warrior/health_ui.gd" id="8_06ixi"]
[ext_resource type="PackedScene" uid="uid://cxt6p8d10u8wp" path="res://ui/inventory/inv_ui.tscn" id="10_pxgkq"]
[ext_resource type="PackedScene" uid="uid://dqehlqbyueb8y" path="res://ui/inventory/hotbar_ui.tscn" id="11_8qwps"]
[ext_resource type="PackedScene" uid="uid://bt220h7jrsmoi" path="res://scripts/LootUI.tscn" id="12_5vi50"]
[ext_resource type="Texture2D" uid="uid://dqnu4hdd3rd1g" path="res://Character/Warrior/IDLE.png" id="13_fra0x"]
[ext_resource type="Texture2D" uid="uid://c3dv2i6kxlu0u" path="res://Character/Warrior/ATTACK 1.png" id="13_hwqtt"]
[ext_resource type="Texture2D" uid="uid://bmptu4qlx0fqg" path="res://Character/Warrior/DEATH.png" id="13_jkru6"]
[ext_resource type="Texture2D" uid="uid://bthlutx6lfchh" path="res://Character/Warrior/ATTACK 2.png" id="13_vctti"]
[ext_resource type="Texture2D" uid="uid://ban76xwv28ghx" path="res://Character/Warrior/DEFEND.png" id="13_xsn7v"]
[ext_resource type="Texture2D" uid="uid://denj0yei6nqe3" path="res://Character/Warrior/RUN.png" id="14_jkru6"]
[ext_resource type="Texture2D" uid="uid://cnnu0ti6nskx0" path="res://Character/Warrior/ATTACK 3.png" id="14_owr25"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ij6vw"]
radius = 12.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44cfe"]
radius = 19.0
height = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uqe86"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8qwps"]
radius = 111.221

[sub_resource type="AtlasTexture" id="AtlasTexture_lqybt"]
atlas = ExtResource("13_hwqtt")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_u67lo"]
atlas = ExtResource("13_hwqtt")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnu51"]
atlas = ExtResource("13_hwqtt")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1nbn"]
atlas = ExtResource("13_hwqtt")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57c2"]
atlas = ExtResource("13_hwqtt")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8leu6"]
atlas = ExtResource("13_hwqtt")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbpg2"]
atlas = ExtResource("13_vctti")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gspx6"]
atlas = ExtResource("13_vctti")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_w7x3h"]
atlas = ExtResource("13_vctti")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcfkj"]
atlas = ExtResource("13_vctti")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eigfg"]
atlas = ExtResource("13_vctti")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkqjx"]
atlas = ExtResource("14_owr25")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_734ve"]
atlas = ExtResource("14_owr25")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpges"]
atlas = ExtResource("14_owr25")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_18oe7"]
atlas = ExtResource("14_owr25")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_maanv"]
atlas = ExtResource("14_owr25")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6duk"]
atlas = ExtResource("14_owr25")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_51l7b"]
atlas = ExtResource("13_xsn7v")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jn1l4"]
atlas = ExtResource("13_xsn7v")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7uji"]
atlas = ExtResource("13_xsn7v")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_m630j"]
atlas = ExtResource("14_jkru6")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_frajw"]
atlas = ExtResource("14_jkru6")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow6yy"]
atlas = ExtResource("14_jkru6")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjrnm"]
atlas = ExtResource("14_jkru6")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7301"]
atlas = ExtResource("14_jkru6")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_24m4u"]
atlas = ExtResource("14_jkru6")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4cf2"]
atlas = ExtResource("14_jkru6")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgoik"]
atlas = ExtResource("14_jkru6")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyqwu"]
atlas = ExtResource("13_jkru6")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmscr"]
atlas = ExtResource("13_jkru6")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ma1v"]
atlas = ExtResource("13_jkru6")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_aijls"]
atlas = ExtResource("13_jkru6")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jjr6"]
atlas = ExtResource("13_jkru6")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_meb8q"]
atlas = ExtResource("13_jkru6")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_iht6x"]
atlas = ExtResource("13_jkru6")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cywod"]
atlas = ExtResource("13_jkru6")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5vwe"]
atlas = ExtResource("13_jkru6")
region = Rect2(768, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qcxd"]
atlas = ExtResource("13_jkru6")
region = Rect2(864, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4id0"]
atlas = ExtResource("13_jkru6")
region = Rect2(960, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_s10lp"]
atlas = ExtResource("13_jkru6")
region = Rect2(1056, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsn7v"]
atlas = ExtResource("13_fra0x")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwqtt"]
atlas = ExtResource("13_fra0x")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vctti"]
atlas = ExtResource("13_fra0x")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_owr25"]
atlas = ExtResource("13_fra0x")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx3wy"]
atlas = ExtResource("13_fra0x")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyewm"]
atlas = ExtResource("13_fra0x")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8cal"]
atlas = ExtResource("13_fra0x")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdrnv"]
atlas = ExtResource("14_jkru6")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tarew"]
atlas = ExtResource("14_jkru6")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwhy1"]
atlas = ExtResource("14_jkru6")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq7ja"]
atlas = ExtResource("14_jkru6")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6sxo"]
atlas = ExtResource("14_jkru6")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwaef"]
atlas = ExtResource("14_jkru6")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd0ny"]
atlas = ExtResource("14_jkru6")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxqv3"]
atlas = ExtResource("14_jkru6")
region = Rect2(672, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_dyqwu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u67lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnu51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1nbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8leu6")
}],
"loop": false,
"name": &"attack",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbpg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gspx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7x3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcfkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eigfg")
}],
"loop": false,
"name": &"attack_combo1",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkqjx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_734ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpges")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18oe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maanv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6duk")
}],
"loop": false,
"name": &"attack_combo2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51l7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jn1l4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7uji")
}],
"loop": false,
"name": &"block",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m630j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frajw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow6yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjrnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7301")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24m4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4cf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgoik")
}],
"loop": false,
"name": &"dash",
"speed": 50.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyqwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmscr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ma1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aijls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jjr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meb8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iht6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cywod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5vwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qcxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4id0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s10lp")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsn7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwqtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vctti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owr25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx3wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyewm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8cal")
}],
"loop": false,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdrnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tarew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwhy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq7ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6sxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwaef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd0ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxqv3")
}],
"loop": false,
"name": &"walk",
"speed": 10.0
}]

[node name="Warrior" type="CharacterBody2D" groups=["player", "player_weapons"]]
script = ExtResource("1_ij6vw")
inv = ExtResource("2_cr365")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -8)
shape = SubResource("CapsuleShape2D_ij6vw")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.4, 1.4)
script = ExtResource("4_44cfe")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_ghijl")

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource("5_dd465")

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]

[node name="Hitbox" type="Area2D" parent="Weapon"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon/Hitbox"]
position = Vector2(19, -2)
shape = SubResource("CapsuleShape2D_44cfe")

[node name="BlockArea" type="Area2D" parent="."]
script = ExtResource("6_b7jr5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BlockArea"]
position = Vector2(24, 1)
shape = SubResource("CircleShape2D_uqe86")

[node name="StaminaUI" type="CanvasLayer" parent="."]
script = ExtResource("7_jw0ga")

[node name="UIRoot" type="Control" parent="StaminaUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StaminaBar" type="ProgressBar" parent="StaminaUI/UIRoot"]
layout_mode = 0
offset_left = 2.0
offset_top = -3.0
offset_right = 202.0
offset_bottom = 24.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
value = 100.0

[node name="HealthUI" type="CanvasLayer" parent="."]
script = ExtResource("8_06ixi")

[node name="UIRoot" type="Control" parent="HealthUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="HealthUI/UIRoot"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 27.0
value = 100.0

[node name="Label" type="Label" parent="HealthUI/UIRoot/HealthBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Inv_UI" parent="." instance=ExtResource("10_pxgkq")]
visible = false
offset_left = 106.0
offset_top = -321.0
offset_right = 566.0
offset_bottom = 198.0

[node name="hotbar_ui" parent="." instance=ExtResource("11_8qwps")]
offset_left = -346.0
offset_top = 273.0
offset_right = -306.0
offset_bottom = 313.0

[node name="LootDetectionArea" type="Area2D" parent="."]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LootDetectionArea"]
shape = SubResource("CircleShape2D_8qwps")

[node name="Panel" parent="LootDetectionArea" instance=ExtResource("12_5vi50")]
visible = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -4)
scale = Vector2(1.23958, 1.25149)
sprite_frames = SubResource("SpriteFrames_dyqwu")
animation = &"dash"
frame = 7
frame_progress = 1.0
